sass grid set up

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
   <div class="container">
     <div class="inner-container">
       <div class="search one">
-        <input type="text" class="search__input" />
-        <input type="submit" class="search__submit button button--small" />
+        <input type="text" class="search__input" placeholder="Good Morning" />
+        <input type="submit" class="search__submit button button--grey" value="submit" />
       </div>
     </div>
     <div class="inner-container">
       <ul class="navigation">
-        <li class="eight"><a href="#" class="navigation__site">bbc</a></li>
-        <li class="eight"<a href="#" class="navigation__site">trello</a></li>
-        <li class="eight"<a href="#" class="navigation__site">google drive</a></li>
-        <li class="eight"<a href="#" class="navigation__site">tech crunch</a></li>
-        <li class="eight"<a href="#" class="navigation__site">trello</a></li>
-        <li class="eight"<a href="#" class="navigation__site">trello</a></li>
-        <li class="eight"<a href="#" class="navigation__site">trello</a></li>
-        <li class="eight"<a href="#" class="navigation__site">add</a></li>
+        <li class="eight navigation__site"><a href="#">bbc</a></li>
+        <li class="eight navigation__site"<a href="#" class="">trello</a></li>
+        <li class="eight navigation__site"<a href="#" class="">google drive</a></li>
+        <li class="eight navigation__site"<a href="#" class="">tech crunch</a></li>
+        <li class="eight navigation__site"<a href="#" class="">trello</a></li>
+        <li class="eight navigation__site"<a href="#" class="">trello</a></li>
+        <li class="eight navigation__site"<a href="#" class="">trello</a></li>
+        <li class="eight navigation__site"<a href="#" class="">add</a></li>
       </ul>
     </div>
     <div class="inner-container">
-      <div class="block four">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div>
-      <div class="block four">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div>
-      <div class="block four">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div>
-      <div class="block four">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div>
-      <div class="block four">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div>
-      <div class="block four">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div>
-      <div class="block four">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div>
-      <div class="block four">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div>
+      <div class="block four"><div class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div></div>
+      <div class="block four"><div class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div></div>
+      <div class="block four"><div class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div></div>
+      <div class="block four"><div class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div></div>
+      <div class="block four"><div class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div></div>
+      <div class="block four"><div class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div></div>
+      <div class="block four"><div class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div></div>
+      <div class="block four"><div class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at accumsan sapien. Etiam arcu risus, aliquam nec ornare non, finibus a nulla.</div></div>
     </div>
   </div>
  </body>
